# file-server

./: .gitignore  CMakeLists.txt  README.md  build.sh
.github/workflows/: cmake-single-platform.yml
benchmarks/: BenchmarkServer.cpp  CMakeLists.txt
include/client/: ClientConfig.h  FileClient.h
include/common/: Constants.h  Protocol.h
include/server/: ConnectionManager.h  DynamicFileGenerator.h  FileServer.h  NetworkUtils.h
src/: CMakeLists.txt
src/client/: ClientConfig.cpp  FileClient.cpp  main.cpp
src/server/: ConnectionManager.cpp  DynamicFileGenerator.cpp  FileServer.cpp  NetworkUtils.cpp  main.cpp
tests/: CMakeLists.txt  TestConnectionManager.cpp  TestDynamicFileGenerator.cpp  TestLoadDistribution.cpp
